err/fog-client.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/cliapp'...
Compiling './lib/python3.5/site-packages/cliapp/app.py'...
***   File "./lib/python3.5/site-packages/cliapp/app.py", line 55
    def __init__(self, filename, perms=0600, *args, **kwargs):
                                          ^
SyntaxError: invalid token

Compiling './lib/python3.5/site-packages/cliapp/runcmd.py'...
***   File "./lib/python3.5/site-packages/cliapp/runcmd.py", line 100
    except OSError, e: # pragma: no cover
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/cliapp/settings.py'...
***   File "./lib/python3.5/site-packages/cliapp/settings.py", line 540
    print filename
                 ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/components'...
Compiling './lib/python3.5/site-packages/components/logins.py'...
***   File "./lib/python3.5/site-packages/components/logins.py", line 31
    print text
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/fog_client.py'...
***   File "./lib/python3.5/site-packages/fog_client.py", line 105
    print "Locked"
                 ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
